fixed warning message

--- a/notebooks/stacey_ml.ipynb
+++ b/notebooks/stacey_ml.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 127,
    "id": "a56ebeeb",
    "metadata": {},
    "outputs": [
@@ -809,19 +809,12 @@
      "text": [
       "Predicted Avg Jan Temp for 2024 (scikit-learn): 38.94°F\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/staceyolson/Repos/datafun-07-ml/.venv/lib/python3.13/site-packages/sklearn/utils/validation.py:2749: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
     }
    ],
    "source": [
     "# --- Section 3 - Predict 2024\n",
-    "pred_2024_sklearn = lr.predict([[2024]])[0]\n",
+    "future = pd.DataFrame({'Year': [2024]})\n",
+    "pred_2024_sklearn = lr.predict(future)[0]\n",
     "print(f\"Predicted Avg Jan Temp for 2024 (scikit-learn): {pred_2024_sklearn:.2f}°F\")"
    ]
   },
